--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                    <p3>ホテル山水<br>
                    ホテルインテリアデザイン、ブランディングデザインの提案</p3>
                     <p4>
-                   霧をコンセプトとし、布のパーテーションを用いたホテル居室空間設計。<br><br>
+                   霧をコンセプトとし、<br>布のパーテーションを用いたホテル居室空間設計。<br><br>
                         ホテルのデザイン制作課題。客室のインテリアデザイン。さらには自らの専門分野におけるインテリアデザインを中心軸としたデザイン展開の課題。私は北海道釧路での滞在での霧の世界、周りには何もなく霧雨の音だけの静かでリラックスできる空間から「霧」をコンセプトとしたデザイン提案をおこなった。さらにはグラフィックデザインへの分野の展開を行い、ロゴデザインとホテル宿泊後に土産として買いたくなるパッケージデザインを制作。
 そのまま「霧」を使うのではなく、「霧」から要素を取り出して、その要素を自らのフィルターに通して新しいものをデザインした。これは今回の課題のみならず他のデザイン制作にも応用できるスキルであると感じた。</p4>
                     
